# arm11-17-group-project

./: .gitignore  CMakeLists.txt  NLP_CW.ipynb  README
doc/: Checkpoint.tex
src/: Makefile  debugger.txt  definitions.h  utils.c  utils.h
src/assembler/: Makefile  arrays.c  assembler.c  branch.c  branch.h  data_processing.c  data_processing.h  definitions.h  io.c  io.h  multiply.c  multiply.h  single_data_transfer.c  single_data_transfer.h  symbol_table.c  symbol_table.h  tokenizer.c  tokenizer.h  utils.c  utils.h
src/emulator/: Makefile  cpsr.c  cpsr.h  decode.c  decode.h  decompiler.c  decompiler.h  definitions.h  emulator.c  fetch.c  fetch.h  gpio.c  gpio.h  io.c  io.h  utils.c  utils.h
src/emulator/execute/: barrel_shifter.c  barrel_shifter.h  branch.c  branch.h  data_processing.c  data_processing.h  execute.c  execute.h  multiply.c  multiply.h  single_data_transfer.c  single_data_transfer.h
src/extension/: extension.c  extension_definitions.h
src/extension/assembler/: block_data_transfer.c  block_data_transfer.h  single_data_swap.c  single_data_swap.h
src/extension/emulator/: decode.c  (+3 more)
testing/test_cases/: ext_ldm01.s  ext_ldm02  ext_ldm02.out  ext_ldm02.s  ext_pop01  ext_pop01.out  ext_pop01.s  ext_push01  ext_push01.out  ext_push01.s  ext_stm01.s  ext_stm02  ext_stm02.out  ext_stm02.s  ext_stm03  ext_stm03.out  ext_stm03.s  ext_stm03.txt  ext_swp01  ext_swp01.out  ext_swp01.s  ext_swp02  ext_swp02.out  ext_swp02.s  ext_swp03  ext_swp03.out  ext_swp03.s  ext_swpb01  ext_swpb01.out  ext_swpb01.s
tools/: mem_checks_assembler.sh  mem_checks_emulator.sh
(+4 files in other folders)
